resolved minor deisplay issues on small laptop sizes

--- a/shota-kiko-portfolio/src/components/layout.css
+++ b/shota-kiko-portfolio/src/components/layout.css
@@ -1138,7 +1138,8 @@ i{
   }
 
   .text{
-    font-size: .9rem;
+    font-size: .8rem;
+    line-height: 1.4;
   }
 
   .aboutLink{
